--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,10 @@
-asgiref==3.5.2
-backports.zoneinfo==0.2.1
-bcrypt==3.2.2
-certifi==2021.10.8
-cffi==1.15.0
-cfgv==3.3.1
-charset-normalizer==2.0.12
-click==8.1.3
-colossalai==0.1.5
-commonmark==0.9.1
-cryptography==37.0.2
-distlib==0.3.4
 Django==4.0.4
-docopt==0.6.2
-fabric==2.7.0
-filelock==3.7.0
-identify==2.5.0
-idna==3.3
-invoke==1.7.1
-nodeenv==1.6.0
+keras==2.8.0
+matplotlib==3.5.2
 numpy==1.22.3
-packaging==21.3
-paramiko==2.11.0
-pathlib2==2.3.7.post1
-pipreqs==0.4.11
-platformdirs==2.5.2
-pre-commit==2.19.0
-psutil==5.9.0
-pycparser==2.21
-Pygments==2.12.0
-PyNaCl==1.5.0
-pyparsing==3.0.9
-PyYAML==6.0
+pandas==1.4.2
+python_dateutil==2.8.2
 requests==2.27.1
-rich==12.4.1
-six==1.16.0
-sqlparse==0.4.2
-toml==0.10.2
-torch==1.11.0
-tqdm==4.64.0
-typing_extensions==4.2.0
-urllib3==1.26.9
-virtualenv==20.14.1
-yarg==0.1.9
+scikit_learn==1.1.0
+scipy==1.8.0
+SQLAlchemy==1.4.36
